@@ -5704,6 +5704,16 @@ return|return
 literal|false
 return|;
 block|}
+if|if
+condition|(
+name|scan
+operator|.
+name|getFilter
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
 comment|// Let the filter see current row.
 name|scan
 operator|.
@@ -5730,6 +5740,47 @@ operator|.
 name|filterAllRemaining
 argument_list|()
 return|;
+block|}
+if|if
+condition|(
+name|scan
+operator|.
+name|getOldFilter
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|scan
+operator|.
+name|getOldFilter
+argument_list|()
+operator|.
+name|filterRowKey
+argument_list|(
+name|endKey
+argument_list|,
+literal|0
+argument_list|,
+name|endKey
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+return|return
+name|scan
+operator|.
+name|getOldFilter
+argument_list|()
+operator|.
+name|filterAllRemaining
+argument_list|()
+return|;
+block|}
+return|return
+literal|false
+return|;
+comment|//unlikely.
 block|}
 specifier|public
 name|Result
